<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>igochan</groupId>
	<artifactId>ged</artifactId>
	<version>0.9.2</version>
	<packaging>pom</packaging>
	<name>ged</name>
	<modules>
		<module>ged-commons-excel</module>
		<module>ged-ear</module>
		<module>ged-ejb</module>
		<module>ged-api</module>
		<module>ged-web</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>

		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>dd-MM-yyyy HH:mm</maven.build.timestamp.format>
		<ged.version>${project.version}</ged.version>

		<javaee-api.version>8.0</javaee-api.version>
		<primefaces.version>7.0</primefaces.version>
		<hibernate-search.version>5.10.5.Final</hibernate-search.version>
		<hibernate-envers.version>5.4.4.Final</hibernate-envers.version>
		<hibernate.version>5.0.5.Final</hibernate.version>
		<infinispan.version>9.4.14.Final</infinispan.version>
		<font-awesome.version>5.10.1</font-awesome.version>
		<slf4j.version>1.7.26</slf4j.version>
		<poi.version>3.17</poi.version>
		<html2pdf.version>2.1.6</html2pdf.version>
		<xml.bind.version>2.2.11</xml.bind.version>
		<javax.activation.version>1.1.1</javax.activation.version>
		<omnifaces.version>3.3</omnifaces.version>
		<commons-fileupload.version>1.4</commons-fileupload.version>
		<swagger.version>1.5.22</swagger.version>
		<jackson-datatype-hibernate5.version>2.9.9</jackson-datatype-hibernate5.version>

		<mockito.version>2.21.0</mockito.version>
		<junit.version>5.5.2</junit.version>

		<maven.ear.plugin.version>3.0.1</maven.ear.plugin.version>
		<maven.war.plugin.version>3.2.2</maven.war.plugin.version>
		<maven.ejb.plugin.version>3.0.1</maven.ejb.plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>javax.xml.bind</groupId>
				<artifactId>jaxb-api</artifactId>
				<version>${xml.bind.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-core</artifactId>
				<version>${xml.bind.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-impl</artifactId>
				<version>${xml.bind.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.activation</groupId>
				<artifactId>activation</artifactId>
				<version>${javax.activation.version}</version>
			</dependency>
			<dependency>
				<groupId>org.primefaces</groupId>
				<artifactId>primefaces</artifactId>
				<version>${primefaces.version}</version>
			</dependency>

			<dependency>
				<groupId>org.infinispan</groupId>
				<artifactId>infinispan-core</artifactId>
				<version>${infinispan.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>font-awesome</artifactId>
				<version>${font-awesome.version}</version>
			</dependency>

			<dependency>
				<groupId>org.omnifaces</groupId>
				<artifactId>omnifaces</artifactId>
				<version>${omnifaces.version}</version>
			</dependency>

			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-search-orm</artifactId>
				<version>${hibernate-search.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-envers</artifactId>
				<version>${hibernate-envers.version}</version>
				<scope>provided</scope>
			</dependency>

			<!-- Apache POI -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi</artifactId>
				<version>${poi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml</artifactId>
				<version>${poi.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi-ooxml-schemas</artifactId>
				<version>${poi.version}</version>
			</dependency>

			<!-- iText -->
			<dependency>
				<groupId>com.itextpdf</groupId>
				<artifactId>html2pdf</artifactId>
				<version>${html2pdf.version}</version>
			</dependency>

			<dependency>
				<groupId>igochan</groupId>
				<artifactId>ged-commons-excel</artifactId>
				<version>${ged.version}</version>
			</dependency>

			<dependency>
				<groupId>igochan</groupId>
				<artifactId>ged-ejb</artifactId>
				<version>${ged.version}</version>
				<type>ejb</type>
			</dependency>

			<dependency>
				<groupId>igochan</groupId>
				<artifactId>ged-web</artifactId>
				<version>${ged.version}</version>
				<type>war</type>
				<scope>compile</scope>
			</dependency>

			<dependency>
				<groupId>igochan</groupId>
				<artifactId>ged-api</artifactId>
				<version>${ged.version}</version>
				<type>war</type>
				<scope>compile</scope>
			</dependency>

			<dependency>
				<groupId>javax</groupId>
				<artifactId>javaee-api</artifactId>
				<version>${javaee-api.version}</version>
				<scope>provided</scope>
			</dependency>

			<dependency>
				<groupId>org.apache.pdfbox</groupId>
				<artifactId>pdfbox</artifactId>
				<version>${pdfbox.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${commons-fileupload.version}</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>${slf4j.version}</version>
			</dependency>

			<dependency>
				<groupId>io.swagger</groupId>
				<artifactId>swagger-jaxrs</artifactId>
				<version>${swagger.version}</version>
			</dependency>

			<dependency>
				<groupId>com.fasterxml.jackson.datatype</groupId>
				<artifactId>jackson-datatype-hibernate5</artifactId>
				<version>${jackson-datatype-hibernate5.version}</version>
			</dependency>

			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-ejb-plugin</artifactId>
					<version>${maven.ejb.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-ear-plugin</artifactId>
					<version>${maven.ear.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>${maven.war.plugin.version}</version>
					<configuration>
						<failOnMissingWebXml>false</failOnMissingWebXml>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
